syntax = "proto3";

package protocol;

option go_package = "./protocol";

message ControlMessage {
  string client_id = 1;
  int32 taskType = 2;
  bool is_ack = 3;
  bool is_abort = 4;
  string error = 5;
  int32 controller_id = 6;
}
